--- a/triversity-vue-app/package.json
+++ b/triversity-vue-app/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "airtable": "^0.7.1",
     "axios": "^0.19.0",
-    "vue": "^2.5.2",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.28",
+    "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
     "vue-material-design-icons": "^3.3.1",
     "vue-router": "^3.0.1"
