--- a/triversity-vue-app/package.json
+++ b/triversity-vue-app/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.28",
+    "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
     "vue-material-design-icons": "^3.3.1",
