--- a/triversity-vue-app/package.json
+++ b/triversity-vue-app/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
     "vue-material-design-icons": "^3.3.1",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
